Refactor Newton ND optimization and implement Newton 1D optimization

--- a/newton_nd_optimization_crude.ipynb
+++ b/newton_nd_optimization_crude.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,35 +13,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gradient(formula, symbols):\n",
+    "def gradient(formula, symbols, values=None):\n",
     "    '''\n",
     "    Given a SymPy formula and variables\n",
     "    Find its analytic gradient without substituion\n",
-    "    as a list of SymPy formulae\n",
+    "    as a list of SymPy formulae or numerical gradient\n",
+    "    if values specified\n",
     "    '''\n",
     "    size = len(symbols)\n",
     "    gradient = []\n",
     "    for i in range(size):\n",
     "        gradient.append(formula.diff(symbols[i]))\n",
-    "    return gradient"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def gradient_at(gradient, symbols, values):\n",
-    "    '''\n",
-    "    Given a SymPy analytic gradient, variables\n",
-    "    and the values (as list) to substitue\n",
-    "    Return its float point value as a list\n",
-    "    '''\n",
+    "        \n",
+    "    if values == None:\n",
+    "        return gradient\n",
+    "\n",
     "    # Make sure you don't mess up the analytical gradient\n",
     "    g_copy = gradient.copy()\n",
     "    gradient_at = []\n",
@@ -54,14 +44,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def hessian(gradient, symbols):\n",
+    "def hessian(gradient, symbols, values=None):\n",
     "    '''\n",
     "    Given an analytic gradient and variables\n",
     "    Calculate its analytic Hessian\n",
+    "    or numerical Hessian if values are specified\n",
     "    '''\n",
     "    size = len(symbols)\n",
     "    hessian = []\n",
@@ -70,20 +61,10 @@
     "    for i in range(size):\n",
     "        for j in range(size):\n",
     "            hessian[i][j] = gradient[i].diff(symbols[j])\n",
-    "    return hessian"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def hessian_at(hessian, symbols, values):\n",
-    "    '''\n",
-    "    Given an analytic Hessian\n",
-    "    Calculate its value with the given substitutions\n",
-    "    '''\n",
+    "            \n",
+    "    if values == None:\n",
+    "        return hessian\n",
+    "    \n",
     "    hessian_at = hessian.copy()\n",
     "    size = len(hessian)\n",
     "    for i in range(size):\n",
@@ -96,21 +77,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def newton_nd_optimization_crude_step(formula, symbols, x_prev):\n",
     "    x_prev = list(x_prev)\n",
     "    grad = gradient(formula, symbols)\n",
-    "    neg_gradient_at = -1 * np.array(gradient_at(grad, symbols, x_prev))\n",
-    "    hes_at = np.array(hessian_at(hessian(grad, symbols), symbols, x_prev))\n",
+    "    neg_gradient_at = -1 * np.array(gradient(formula, symbols, values=x_prev))\n",
+    "    hes_at = np.array(hessian(grad, symbols, values=x_prev))\n",
     "    return np.array(x_prev) + la.solve(hes_at, neg_gradient_at)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,8 +123,7 @@
     "x, y = sp.symbols('x y')\n",
     "tolerance = 10**-7\n",
     "# Test Case: Gradient\n",
-    "grad = gradient(form, (x, y))\n",
-    "grad_at = gradient_at(grad, (x, y), [0, 1])\n",
+    "grad_at = gradient(form, (x, y), values=[0, 1])\n",
     "expected = np.array([\n",
     "    float(form.diff(x).subs(x, 0).subs(y, 1).evalf()),\n",
     "    float(form.diff(y).subs(x, 0).subs(y, 1).evalf())\n",
@@ -154,13 +134,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Test Case: Hessian\n",
-    "hes = hessian(grad, (x, y))\n",
-    "hes_at = hessian_at(hes, (x, y), [0, 1])\n",
+    "hes = hessian(gradient(form, (x, y)), (x, y), values=[0, 1])\n",
     "expected = np.array([\n",
     "    [\n",
     "        float(form.diff(x).diff(x).subs(x, 0).subs(y, 1).evalf()),\n",
@@ -170,13 +149,13 @@
     "        float(form.diff(y).diff(y).subs(x, 0).subs(y, 1).evalf())\n",
     "    ]\n",
     "])\n",
-    "actual = np.array(hes_at)\n",
+    "actual = np.array(hes)\n",
     "assert la.norm(expected - actual, 2) < tolerance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,6 +168,32 @@
     "expected = la.solve(H, v) * -1 + np.array([0, 1])\n",
     "actual = newton_nd_optimization_crude_step(form, (x, y), np.array([0, 1]))\n",
     "assert la.norm(expected - actual, 2) < tolerance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 3.07907313 -4.80335408]\n",
+      "[25.0, 26.54648713412841]\n",
+      "[[39.0, 25.0], [25.0, 17.838531634528575]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "form = sp.sympify('11*x**2+13*x*y+11*y**2+6*E**(2*x*y)+5*(sin(y)**2)+7*cos(x*y)')\n",
+    "symbols = sp.symbols('x y')\n",
+    "print(newton_nd_optimization_crude_step(form, symbols, [0, 1]))\n",
+    "print(gradient(form, symbols, values=[0, 1]))\n",
+    "print(hessian(gradient(form, symbols), symbols, values=[0, 1]))\n",
+    "# Works, great!"
    ]
   }
  ],
