Implement SVD pseudo inverse

--- a/finite_difference_nd.ipynb
+++ b/finite_difference_nd.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import sympy as sp"
+    "import sympy as sp\n",
+    "import numpy.linalg as la"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,30 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1.0000000000000009, 3.1000000000000005, 2.0000000000000018]"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "finite_difference_nd('x*z+y**2*z+y', 'x y z', [1, 1, 1], 0.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Test case backward finite difference method\n",
+    "tol = 10**-7\n",
+    "expected = np.array([1, 2.9, 2])\n",
+    "actual = np.array(finite_difference_nd('x*z+y**2*z+y', 'x y z', [1, 1, 1], 0.1, scheme=1))\n",
+    "assert la.norm(expected - actual) < tol"
+   ]
   }
  ],
  "metadata": {
