Extend svd script functionalities and implement low rank approximation

--- a/svd.ipynb
+++ b/svd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,6 +229,39 @@
     "b = np.array([6, 0, 0])\n",
     "expected = np.array([-np.sqrt(1/3), 1/3, 0])\n",
     "actual = lls_with_svd(U, sigma, V, b)\n",
+    "tol = 10 ** -7\n",
+    "assert la.norm(expected - actual, 2) < tol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def svd_for_lin_sys(U, sigma, V, b):\n",
+    "    '''\n",
+    "    For A = U@sigma@V.T and Ax = b\n",
+    "    We want to find x\n",
+    "    note that sigma only has diagonal entries\n",
+    "    and we assume that they don't contain 0s\n",
+    "    '''\n",
+    "    return V@np.diag(1/sigma)@U.T@b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generic Test Case 1 for svd_for_lin_sys\n",
+    "V = np.identity(3)\n",
+    "U = np.array([[0, 0.5**0.5, 0.5**0.5], [0, 0.5**0.5, -0.5**0.5], [1, 0, 0]])\n",
+    "sigma = np.array([7, 5, 4])\n",
+    "b = np.array([2**0.5, 2**0.5, 1])\n",
+    "expected = np.array([0.14285714, 0.4, 0.0])\n",
+    "actual = svd_for_lin_sys(U, sigma, V, b)\n",
     "tol = 10 ** -7\n",
     "assert la.norm(expected - actual, 2) < tol"
    ]
