Include scripts for PCA, Taylor Series and fix bugs

--- a/newton_nd_optimization_crude.ipynb
+++ b/newton_nd_optimization_crude.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,10 +44,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def subs_all(formula, variables, values):\n",
+    "    '''\n",
+    "    You know what, it's getting to the point where this function\n",
+    "    is necessary\n",
+    "    '''\n",
+    "    result = formula\n",
+    "    for i in range(len(values)):\n",
+    "        result = result.subs(variables[i], values[i])\n",
+    "    return float(result.evalf())\n",
     "def hessian(gradient, symbols, values=None):\n",
     "    '''\n",
     "    Given an analytic gradient and variables\n",
@@ -69,15 +78,16 @@
     "    size = len(hessian)\n",
     "    for i in range(size):\n",
     "        for j in range(size):\n",
-    "            for k in range(len(symbols)):\n",
-    "                hessian_at[i][j] = hessian_at[i][j].subs(symbols[k], values[k])\n",
-    "            hessian_at[i][j] = float(hessian_at[i][j].evalf())\n",
+    "            hessian_at[i][j] = subs_all(hessian_at[i][j], symbols, [float(v) for v in values])\n",
+    "#             for k in range(len(symbols)):\n",
+    "#                 hessian_at[i][j] = hessian_at[i][j].subs(symbols[k], values[k])\n",
+    "#             hessian_at[i][j] = float(hessian_at[i][j].evalf())\n",
     "    return hessian_at"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {
     "scrolled": false
    },
@@ -183,7 +193,7 @@
      "text": [
       "[ 3.07907313 -4.80335408]\n",
       "[25.0, 26.54648713412841]\n",
-      "[[39.0, 25.0], [25.0, 17.838531634528575]]\n"
+      "[[39.0, 25.0], [25.0, 17.83853163452858]]\n"
      ]
     }
    ],
@@ -195,6 +205,38 @@
     "print(hessian(gradient(form, symbols), symbols, values=[0, 1]))\n",
     "# Works, great!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[6.0, 0.0], [0.0, 192.0]]\n",
+      "[0.         1.33333333]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Workspace\n",
+    "form = sp.sympify('3*x**2+4*y**4')\n",
+    "symbols = sp.symbols('x y')\n",
+    "values = [3, 2]\n",
+    "hes = hessian(gradient(form, symbols), symbols, values)\n",
+    "x_1 = newton_nd_optimization_crude_step(form, symbols, values)\n",
+    "print(hes)\n",
+    "print(x_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
