--- a/svd.ipynb
+++ b/svd.ipynb
@@ -265,6 +265,48 @@
     "tol = 10 ** -7\n",
     "assert la.norm(expected - actual, 2) < tol"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Note\n",
+    "\n",
+    "For `Solve rank-deficient system with SVD`, you will need\n",
+    "\n",
+    "* `lls_with_svd`\n",
+    "\n",
+    "* `svd_pseudo_inverse`\n",
+    "\n",
+    "* `fat_sigma`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fat_sigma(S, U_shape, Vt_shape):\n",
+    "    '''\n",
+    "    Construct a full sigma from an 1D one\n",
+    "    Given the dimensions of U and Vt from\n",
+    "    SVD\n",
+    "    '''\n",
+    "    res = np.zeros((U_shape[1], Vt_shape[0]))\n",
+    "    for i in range(len(S)):\n",
+    "        res[i][i] = S[i]\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Workspace\n"
+   ]
   }
  ],
  "metadata": {
