--- a/sparse.ipynb
+++ b/sparse.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,6 +161,40 @@
     "assert expected_rowptr == actual_rowptr\n",
     "assert expected_shape == actual_shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0. , 0. , 0. , 0.4],\n",
+       "       [0. , 0.6, 0.1, 0.7],\n",
+       "       [0.3, 0. , 0. , 0. ],\n",
+       "       [0.5, 0.5, 0. , 0.8]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Workspace\n",
+    "data = [0.40, 0.60, 0.10, 0.80, 0.50, 0.70, 0.50, 0.30]\n",
+    "row = [0, 1, 1, 3, 3, 1, 3, 2]\n",
+    "col = [3, 1, 2, 3, 0, 3, 1, 0]\n",
+    "COO_to_DNS(data, col, row, (4, 4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
