--- a/hall_of_fame.ipynb
+++ b/hall_of_fame.ipynb
@@ -102,6 +102,77 @@
     "        \n",
     "volume = count / n * 10 * 10 * 2"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Classic Problem 3\n",
+    "\n",
+    "## Solve linear system using SVD\n",
+    "\n",
+    "So this question basically only allows you to multiply $U$ on the right and $V$ on the left. We will assume that A is invertible, which saves a lot of troubles.\n",
+    "\n",
+    "Let's try to justify it with analytic expression:\n",
+    "\n",
+    "$Ax=b$\n",
+    "\n",
+    "$A^{-1}Ax = A^{-1}b$\n",
+    "\n",
+    "$x = V\\Sigma^{-1}U^Tb$\n",
+    "\n",
+    "$x = V\\Sigma^{-1}(b^TU)^T$\n",
+    "\n",
+    "Therefore, we can conclude that the following code works:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "x = left_multiply_with_V(np.diag(1/sigma)@right_multiply_with_U(b).T)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Interesting Problem 2\n",
+    "\n",
+    "## Newton's Method - Newton's Method\n",
+    "\n",
+    "This is Newton's method used for ND solve. At first I think my scripts are not directly applicable, but then I found a way to transform the problem into what I need."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import numpy.linalg as la\n",
+    "import sympy as sp\n",
+    "\n",
+    "# These functions are from the newton_nd_solve script\n",
+    "def subs_all…\n",
+    "def calculated_jacobian…\n",
+    "def newton_nd_step…\n",
+    "\n",
+    "f_strs = ['16*x**4+16*y**4+z**4-16', 'x**2+y**2+z**2-3', 'x**3-y']\n",
+    "x_prev = [1, 1, 1]\n",
+    "var_str = 'x y z'\n",
+    "res = []\n",
+    "for i in range(5):\n",
+    "    x_prev = [1, 1, 1]\n",
+    "    for j in range(i+1):\n",
+    "        jac, x_prev = newton_nd_step(x_prev, f_strs, var_str)\n",
+    "    res.append(np.array(x_prev))\n",
+    "guesses = np.array(res)"
+   ]
   }
  ],
  "metadata": {
