--- a/newton_nd_optimization_crude.ipynb
+++ b/newton_nd_optimization_crude.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
@@ -208,27 +208,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[6.0, 0.0], [0.0, 192.0]]\n",
-      "[0.         1.33333333]\n"
+      "[[8.0, 0.0], [0.0, 72.0]]\n",
+      "[0.         0.66666667]\n",
+      "[-2.         -0.33333333]\n"
      ]
     }
    ],
    "source": [
     "# Workspace\n",
-    "form = sp.sympify('3*x**2+4*y**4')\n",
+    "form = sp.sympify('4*x**2+6*y**4')\n",
     "symbols = sp.symbols('x y')\n",
-    "values = [3, 2]\n",
+    "values = [2, 1]\n",
     "hes = hessian(gradient(form, symbols), symbols, values)\n",
     "x_1 = newton_nd_optimization_crude_step(form, symbols, values)\n",
+    "step = np.array(x_1) - np.array(values)\n",
     "print(hes)\n",
-    "print(x_1)"
+    "print(x_1)\n",
+    "print(step)"
    ]
   },
   {
