--- a/pca.ipynb
+++ b/pca.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,48 +109,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.        , 0.70710678],\n",
-       "       [0.        , 0.70710678]])"
+       "5"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Workspace\n",
-    "A = np.array([[9, -4], [0, 5]])\n",
-    "v, w = la.eig(A)\n",
-    "w"
+    "U = np.array([[0.0, -0.1, -0.4, -0.3, 0.4, -0.1, -0.1, -0.1, -0.1, 0.2], [-0.1, -0.1, 0.3, 0.4, 0.5, 0.0, -0.3, 0.0, 0.0, 0.2], [0.1, -0.2, -0.2, -0.1, -0.1, -0.4, -0.1, 0.4, 0.2, 0.1], [0.4, -0.3, -0.2, 0.1, 0.1, 0.3, -0.1, -0.3, -0.1, 0.0], [0.0, -0.3, -0.2, -0.1, -0.3, 0.1, -0.4, -0.3, 0.4, -0.2], [0.0, 0.3, 0.0, 0.1, -0.1, 0.0, -0.5, 0.0, -0.2, 0.5], [0.0, 0.6, -0.1, 0.0, -0.1, 0.1, -0.1, 0.0, 0.4, 0.1], [0.2, 0.0, -0.2, 0.3, 0.1, 0.3, 0.3, -0.1, 0.2, 0.0], [0.0, 0.1, -0.2, -0.4, 0.1, 0.4, 0.2, 0.2, -0.4, 0.0], [0.6, 0.2, -0.2, 0.3, 0.1, -0.3, 0.2, 0.0, 0.0, -0.1], [-0.1, -0.1, -0.1, -0.1, -0.1, -0.3, -0.3, -0.2, -0.2, -0.3], [0.1, 0.2, -0.5, 0.0, 0.0, -0.1, 0.0, -0.1, 0.1, 0.2], [-0.2, -0.2, 0.0, 0.2, -0.5, 0.0, 0.2, -0.2, -0.2, 0.5], [-0.4, -0.1, -0.3, 0.3, 0.2, 0.2, -0.1, 0.3, 0.3, 0.0], [-0.2, -0.3, 0.0, 0.0, 0.0, -0.4, 0.4, -0.1, 0.1, 0.2], [-0.5, 0.3, -0.3, 0.2, 0.1, -0.2, 0.1, -0.4, -0.2, -0.3], [0.0, -0.1, -0.3, 0.4, -0.3, 0.1, -0.2, 0.4, -0.4, -0.1]])\n",
+    "S = np.array([[32,  0,  0,  0,  0,  0,  0,  0,  0,  0], [ 0, 29,  0,  0,  0,  0,  0,  0,  0,  0], [ 0,  0, 28,  0,  0,  0,  0,  0,  0,  0], [ 0,  0,  0, 25,  0,  0,  0,  0,  0,  0], [ 0,  0,  0,  0, 22,  0,  0,  0,  0,  0], [ 0,  0,  0,  0,  0, 21,  0,  0,  0,  0], [ 0,  0,  0,  0,  0,  0, 19,  0,  0,  0], [ 0,  0,  0,  0,  0,  0,  0, 12,  0,  0], [ 0,  0,  0,  0,  0,  0,  0,  0,  9,  0], [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  2]])\n",
+    "V = np.array([[0.0, 0.7, -0.2, 0.0, -0.6, 0.0, 0.2, -0.2, 0.2, -0.1], [-0.1, -0.3, -0.5, 0.0, -0.2, -0.1, -0.1, 0.2, 0.7, 0.0], [0.2, -0.2, -0.3, 0.4, -0.4, -0.4, -0.2, 0.0, -0.4, -0.4], [-0.6, 0.2, -0.1, -0.2, 0.0, -0.5, -0.1, 0.3, -0.2, 0.3], [0.3, 0.2, 0.0, -0.1, 0.1, -0.2, -0.8, -0.3, 0.1, 0.3], [-0.5, -0.3, 0.5, -0.1, -0.3, -0.1, -0.2, -0.5, 0.2, -0.3], [-0.2, 0.2, 0.1, 0.8, 0.3, -0.1, 0.0, -0.1, 0.3, 0.1], [-0.2, -0.1, -0.5, -0.2, 0.4, -0.1, 0.2, -0.6, -0.1, -0.1], [-0.3, 0.2, -0.1, 0.0, 0.2, 0.4, -0.5, 0.3, -0.1, -0.6], [-0.3, -0.2, -0.3, 0.2, -0.3, 0.5, -0.2, -0.1, -0.3, 0.5]])\n",
+    "pc_needed(U, S, V, 0.73)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remember to check for negative signs!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.55525  0.40575  0.66125]\n",
-      " [-1.28225 -0.72525  0.47025]\n",
-      " [ 0.96975  1.51675 -0.11675]\n",
-      " [ 0.86775 -1.19725 -1.01475]]\n",
-      "0.14317511289838647\n"
+      "[[ 0.41925 -0.76    -0.486  ]\n",
+      " [-0.24775 -0.351    0.401  ]\n",
+      " [-1.33275  0.834   -0.276  ]\n",
+      " [ 1.16125  0.277    0.361  ]]\n",
+      "0.6494568557902726\n"
      ]
     }
    ],
    "source": [
     "# Workspace 2\n",
-    "X = np.array([[-0.691, 0.721, 0.791], [-1.418, -0.410, 0.600], [0.834, 1.832, 0.013], [0.732, -0.882, -0.885]])\n",
+    "X = np.array([[-0.273, -1.366, -0.906], [-0.940, -0.957, -0.019], [-2.025, 0.228, -0.696], [0.469, -0.329, -0.059]])\n",
     "mat, sca = singular_values_for_pca_mean(X)\n",
     "print(mat)\n",
     "print(sca)"
