--- a/sparse.ipynb
+++ b/sparse.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,29 +164,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0. , 0. , 0. , 0.4],\n",
-       "       [0. , 0.6, 0.1, 0.7],\n",
-       "       [0.3, 0. , 0. , 0. ],\n",
-       "       [0.5, 0.5, 0. , 0.8]])"
+       "array([[0. , 0.4, 0.8, 0.1],\n",
+       "       [0. , 0. , 0.4, 0.2],\n",
+       "       [0. , 0.4, 0. , 0.3],\n",
+       "       [0. , 0. , 0. , 0. ]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Workspace\n",
-    "data = [0.40, 0.60, 0.10, 0.80, 0.50, 0.70, 0.50, 0.30]\n",
-    "row = [0, 1, 1, 3, 3, 1, 3, 2]\n",
-    "col = [3, 1, 2, 3, 0, 3, 1, 0]\n",
+    "data = [0.80, 0.10, 0.40, 0.20, 0.30, 0.40, 0.40]\n",
+    "row = [0, 0, 0, 1, 2, 1, 2]\n",
+    "col = [2, 3, 1, 3, 3, 2, 1]\n",
     "COO_to_DNS(data, col, row, (4, 4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.8, 0. , 0. , 0.3],\n",
+       "       [0. , 0.7, 0.7, 0. ],\n",
+       "       [0.1, 0. , 0.2, 0. ],\n",
+       "       [0. , 0.1, 0. , 0.7]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Workspace 2\n",
+    "data = [0.80, 0.30, 0.70, 0.70, 0.10, 0.20, 0.10, 0.70]\n",
+    "rowptr = [0, 2, 4, 6, 8]\n",
+    "col = [0, 3, 1, 2, 0, 2, 1, 3]\n",
+    "CSR_to_DNS(data, col, rowptr, (4, 4))"
    ]
   },
   {
